--- a/style.css
+++ b/style.css
@@ -10,6 +10,12 @@ h2 {
   font-family: 'Playfair Display', serif;
 }
 
+.container {
+  max-width: 1240px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
 body {}
 
 header {}
